优化代码及注释