@@ -5,137 +5,51 @@ import java.util.ArrayList;
 
 import org.colorcoding.tools.btulz.Console;
 import org.colorcoding.tools.btulz.command.Command4Code;
-import org.colorcoding.tools.btulz.command.Command4DsJar;
-import org.colorcoding.tools.btulz.command.Command4Ds;
-import org.colorcoding.tools.btulz.command.Command4Excel;
-import org.colorcoding.tools.btulz.command.Command4Sql;
 import org.colorcoding.tools.btulz.test.Environment;
 
 import junit.framework.TestCase;
 
+/**
+ * 命令行测试
+ *
+ * 覆盖： - Console空参数调用 - Command4Code：代码生成命令（代表所有命令行入口）
+ *
+ * 注意：Command4Ds/Command4Sql/Command4DsJar/Command4Excel等
+ * 均为对应Transformer的命令行包装，与Transformer测试重复
+ */
 public class TestCommands extends TestCase {
-	public void testConsole() {
-		Console.main(new String[] {});
+
+	/** 测试用控制台，继承Console以访问protected方法，避免触发System.exit */
+	static class TestConsole extends Console {
+		/** 运行命令，返回退出码（不触发System.exit） */
+		public static int execute(String[] args) {
+			return getCommandsManager().run(args);
+		}
 	}
 
-	// java -Djava.ext.dirs=./lib -jar
-	// code -TemplateFolder=eclipse/ibas_classic
-	// -OutputFolder=%ibasWorkspace%\temp -GroupId=org.colorcoding
-	// -ArtifactId=ibas -ProjectVersion=0.0.1 -ProjectUrl=http://colorcoding.org
-	// -Domains=%ibasWorkspace%\initialization
-	// -Parameters=[{"name":"ibasVersion","value":"0.1.1"},{"name":"jerseyVersion","value":"2.22.1"}]
+	/** 控制台空参数调用 */
+	public void testConsole() {
+		TestConsole.execute(new String[] {});
+	}
 
+	/** 代码生成命令（代表所有命令行入口） */
 	public void testCommandCode() {
 		ArrayList<String> args = new ArrayList<>();
 		args.add(String.format(Command4Code.COMMAND_PROMPT)); // 命令
 		args.add(String.format("-TemplateFolder=%s", "eclipse/ibas_classic")); // 使用的模板
-		// args.add(String.format("-OutputFolder=%s",
-		// System.getenv("ibasWorkspace") + File.separator + "temp")); // 输出目录
-		args.add(String.format("-OutputFolder=%s", "/home/manager/code/btulz4ibcp/out/")); // 输出目录
+		args.add(String.format("-OutputFolder=%s", Environment.getOutputFolder())); // 输出目录
 		args.add(String.format("-GroupId=%s", "org.colorcoding"));// 组标记
 		args.add(String.format("-ArtifactId=%s", "ibas"));// 项目标记
-		// args.add(String.format("-ProjectId=%s",
-		// UUID.randomUUID().toString()));// 项目版本
 		args.add(String.format("-ProjectVersion=%s", "0.0.1"));// 项目版本
 		args.add(String.format("-ProjectUrl=%s", "http://colorcoding.org"));// 项目地址
-		// args.add(String.format("-Domains=%s", System.getenv("ibasWorkspace")
-		// + File.separator + "initialization")); // 模型文件
 		args.add(String.format("-Domains=%s",
-				"/home/manager/code/btulz.transforms/btulz.transforms.shell/target/test-classes")); // 模型文件
+				Environment.getCodeFolder() + "/btulz.transforms/btulz.transforms.shell/target/test-classes"
+						.replace("/", File.separator))); // 模型文件
 		args.add(String.format("-Parameters=%s",
 				"[{\"name\":\"Company\",\"value\":\"CC\"},{\"name\":\"ibasVersion\",\"value\":\"0.1.1\"},{\"name\":\"jerseyVersion\",\"value\":\"2.22.1\"}]")); // 其他参数
 		System.out.println("显示帮助信息：");
-		Console.main(new String[] { Command4Code.COMMAND_PROMPT, Command4Code.ARGUMENT_NAME_HELP });
+		TestConsole.execute(new String[] { Command4Code.COMMAND_PROMPT, Command4Code.ARGUMENT_NAME_HELP });
 		System.out.println("开始运行：");
-		Console.main(args.toArray(new String[] {}));
-	}
-
-	// java -Djava.ext.dirs=./lib -jar
-	// ds -TemplateFile=ds_mysql_ibas_classic.xml -Company=CC
-	// -DbServer=ibas-dev-mysql -DbPort=3306 -DbSchema= -DbName=ibas_demo
-	// -DbUser=root -DbPassword=1q2w3e -Domains=%ibasWorkspace%\initialization
-	// -Release
-	public void testCommandDs() {
-		ArrayList<String> args = new ArrayList<>();
-		args.add(String.format(Command4Ds.COMMAND_PROMPT)); // 命令
-		args.add(String.format("-TemplateFile=%s", "ds_mysql_ibas_classic.xml")); // 使用的模板
-		args.add(String.format("-Company=%s", "CC")); // 公司
-		args.add(String.format("-DbServer=%s", "ibas-dev-mysql"));// 数据库地址
-		args.add(String.format("-DbPort=%s", "3306"));// 数据库端口
-		args.add(String.format("-DbSchema=%s", ""));// 数据库架构
-		args.add(String.format("-DbName=%s", "ibas_demo_" + this.hashCode()));// 数据库名称
-		args.add(String.format("-DbUser=%s", "root")); // 用户
-		args.add(String.format("-DbPassword=%s", "1q2w3e")); // 密码
-		args.add(String.format("-Domains=%s", System.getenv("ibasWorkspace") + File.separator + "initialization"));// 模型文件
-		args.add(String.format("-Release")); // 释放资源
-		System.out.println("显示帮助信息：");
-		Console.main(new String[] { Command4Ds.COMMAND_PROMPT, Command4Ds.ARGUMENT_NAME_HELP });
-		System.out.println("开始运行：");
-		Console.main(args.toArray(new String[] {}));
-	}
-
-	// java -Djava.ext.dirs=./lib -jar
-	// sql
-	// -TemplateFile=%ibasWorkspace%\initialization\sql_mysql_ibas_initialization.xml
-	// -Company=CC -DbServer=ibas-dev-mysql -DbPort=3306 -DbSchema=
-	// -DbName=ibas_demo
-	// -DbUser=root -DbPassword=1q2w3e
-	public void testCommandSql() {
-		ArrayList<String> args = new ArrayList<>();
-		args.add(String.format(Command4Sql.COMMAND_PROMPT)); // 命令
-		args.add(String.format("-SqlFile=%s", System.getenv("ibasWorkspace") + File.separator + "initialization"
-				+ File.separator + "sql_mysql_ibas_initialization.xml")); // 使用的模板
-		args.add(String.format("-Company=%s", "CC")); // 公司
-		args.add(String.format("-DbServer=%s", "ibas-dev-mysql"));// 数据库地址
-		args.add(String.format("-DbPort=%s", "3306"));// 数据库端口
-		args.add(String.format("-DbSchema=%s", ""));// 数据库架构
-		args.add(String.format("-DbName=%s", "ibas_demo_" + this.hashCode()));// 数据库名称
-		args.add(String.format("-DbUser=%s", "root")); // 用户
-		args.add(String.format("-DbPassword=%s", "1q2w3e")); // 密码
-		System.out.println("显示帮助信息：");
-		Console.main(new String[] { Command4Sql.COMMAND_PROMPT, Command4Sql.ARGUMENT_NAME_HELP });
-		System.out.println("开始运行：");
-		Console.main(args.toArray(new String[] {}));
-	}
-	// java -Djava.ext.dirs=./lib -jar
-	// dsJar -DsTemplate=ds_mysql_ibas_classic.xml
-	// -JarFile=%ibasWorkspace%\initialization\ibas.trainingtesting-0.0.1.jar
-	// -SqlFilter=sql_mysql
-	// -Company=CC -DbServer=ibas-dev-mysql -DbPort=3306 -DbSchema=
-	// -DbName=ibas_demo
-	// -DbUser=root -DbPassword=1q2w3e
-
-	public void testCommandDSJar() {
-		ArrayList<String> args = new ArrayList<>();
-		args.add(String.format(Command4DsJar.COMMAND_PROMPT)); // 命令
-		args.add(String.format("-DsTemplate=%s", "ds_mysql_ibas_classic.xml")); // 使用的模板
-		args.add(String.format("-JarFile=%s", System.getenv("ibasWorkspace") + File.separator + "initialization"
-				+ File.separator + "ibas.trainingtesting-0.0.1.jar")); // 待分析jar包
-		args.add(String.format("-SqlFilter=%s", "sql_mysql")); // sql过滤
-		args.add(String.format("-Company=%s", "CC")); // 公司
-		args.add(String.format("-DbServer=%s", "ibas-dev-mysql"));// 数据库地址
-		args.add(String.format("-DbPort=%s", "3306"));// 数据库端口
-		args.add(String.format("-DbSchema=%s", ""));// 数据库架构
-		args.add(String.format("-DbName=%s", "ibas_demo_" + this.hashCode()));// 数据库名称
-		args.add(String.format("-DbUser=%s", "root")); // 用户
-		args.add(String.format("-DbPassword=%s", "1q2w3e")); // 密码
-		args.add(String.format("-Release")); // 释放资源
-		System.out.println("显示帮助信息：");
-		Console.main(new String[] { Command4DsJar.COMMAND_PROMPT, Command4DsJar.ARGUMENT_NAME_HELP });
-		System.out.println("开始运行：");
-		Console.main(args.toArray(new String[] {}));
-	}
-
-	public void testCommandExcel() {
-		ArrayList<String> args = new ArrayList<>();
-		args.add(String.format(Command4Excel.COMMAND_PROMPT)); // 命令
-		args.add(String.format("-ExcelFile=%s",
-				(new File(Environment.getWorkingFolder())).getParent() + Environment.getExcelModelsFile())); // 使用的模板
-		args.add(String.format("-OutputFolder=%s", "D:\\worktemp\\")); // 输出目录
-		args.add(String.format("-IgnoreSheet=%s", "no")); // 输出目录
-		System.out.println("显示帮助信息：");
-		Console.main(new String[] { Command4Excel.COMMAND_PROMPT, Command4Excel.ARGUMENT_NAME_HELP });
-		System.out.println("开始运行：");
-		Console.main(args.toArray(new String[] {}));
+		TestConsole.execute(args.toArray(new String[] {}));
 	}
 }
